<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.MainActivity" >

    <ImageView
        android:id="@+id/vending_machine_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/bear_utique_v"
        android:contentDescription="@string/image_description" />

    <TextView
        android:id="@+id/insert_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_money"
        android:layout_toRightOf="@id/vending_machine_image"
        android:layout_toEndOf="@id/vending_machine_image" />

    <TextView
        android:id="@+id/current_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vending_machine_image"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/current_balance" />

    <TextView
        android:id="@+id/dispense_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/change_balance"
        android:layout_below="@id/current_balance"
        android:layout_alignLeft="@id/current_balance"
        android:layout_alignStart="@id/current_balance" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dispense_change"
        android:layout_alignLeft="@id/current_balance"
        android:layout_alignStart="@id/current_balance"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/button_1_cent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/insert_money"
        android:text="@string/one_cent"
        android:layout_toRightOf="@id/vending_machine_image"
        android:layout_toEndOf="@id/vending_machine_image" />

    <Button
        android:id="@+id/button_5_cent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_1_cent"
        android:text="@string/five_cent"
        android:layout_toRightOf="@id/vending_machine_image"
        android:layout_toEndOf="@id/vending_machine_image" />

    <Button
        android:id="@+id/button_10_cent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_5_cent"
        android:text="@string/ten_cent"
        android:layout_toRightOf="@id/vending_machine_image"
        android:layout_toEndOf="@id/vending_machine_image" />

    <Button
        android:id="@+id/button_25_cent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_10_cent"
        android:text="@string/twenty_five_cent"
        android:layout_toRightOf="@id/vending_machine_image"
        android:layout_toEndOf="@id/vending_machine_image" />

    <Button
        android:id="@+id/button_1_dollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_25_cent"
        android:text="@string/one_dollar"
        android:layout_toRightOf="@id/vending_machine_image"
        android:layout_toEndOf="@id/vending_machine_image" />

    <Button
        android:id="@+id/button_5_dollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_1_dollar"
        android:text="@string/five_dollar"
        android:layout_toRightOf="@id/vending_machine_image"
        android:layout_toEndOf="@id/vending_machine_image" />

    <Button
        android:id="@+id/dispense_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/darker_gray"
        android:text="@string/dispense_button"/>

</android.widget.RelativeLayout>
